--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</header>
 
 		<main>
-        	<h2>The weather today is:<span></span></h2>
+        	<h2>The weather today is:<span id="span"></span></h2>
 		</main>
 
 		<footer>
