--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</header>
 
 		<main>
-        	<h2>The weather today is:<span id="span"></span></h2>
+        	<h2>The weather today is:<span id="span"> </span></h2>
 		</main>
 
 		<footer>
@@ -21,7 +21,7 @@
 		</footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <script src="src/main.js"></script>
 	</body>
 
 </html>
